--- a/src/gui/BookList.fxml
+++ b/src/gui/BookList.fxml
@@ -4,12 +4,11 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="383.0" prefWidth="685.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="383.0" prefWidth="685.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.BookListController">
    <children>
       <Label text="Book Manegement">
          <font>
@@ -18,21 +17,20 @@
       </Label>
       <ToolBar prefHeight="40.0" prefWidth="200.0">
         <items>
-          <Button mnemonicParsing="false" text="Filter" />
-            <TextField />
-            <Button mnemonicParsing="false" text="New" />
+          <Button fx:id="btFilter" mnemonicParsing="false" onAction="#onBtFilterAction" text="Filter" />
+            <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
         </items>
       </ToolBar>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableViewBook" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="ISBN" />
-          <TableColumn prefWidth="200.0" text="Nome" />
-            <TableColumn prefWidth="200.0" text="Autor" />
-            <TableColumn prefWidth="70.0" text="Preco" />
-            <TableColumn prefWidth="70.0" text="Dt. Publicacao" />
-            <TableColumn prefWidth="70.0" text="Capa" />
-            <TableColumn prefWidth="50.0" />
-            <TableColumn prefWidth="50.0" />
+          <TableColumn fx:id="tableColumnIsbn" prefWidth="75.0" text="ISBN" />
+          <TableColumn fx:id="tableColumnName" prefWidth="200.0" text="Name" />
+            <TableColumn fx:id="tableColumnAutor" prefWidth="200.0" text="Autor" />
+            <TableColumn fx:id="tableColumnPrice" prefWidth="70.0" text="Price" />
+            <TableColumn fx:id="tableColumnReleaseDt" prefWidth="70.0" text="Release Dt." />
+            <TableColumn fx:id="tableColumnImgPath" prefWidth="70.0" text="Cape" />
+            <TableColumn fx:id="tableColumnEdit" prefWidth="50.0" />
+            <TableColumn fx:id="tableColumnRemove" prefWidth="50.0" />
         </columns>
       </TableView>
    </children>
